--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-15  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/9259
+	* typeck.c (build_class_member_access_expr): Allow to access members
+	of the currently open class.
+	(finish_class_member_access_expr): Likewise.
+
 2004-01-15  Alexandre Oliva  <aoliva@redhat.com>
 
 	PR c++/13659
