--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-15  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/9259
+	* g++.dg/expr/sizeof2.C: New test.
+
 2004-01-15  Kazu Hirata  <kazu@cs.umass.edu>
 
 	* gcc.dg/sibcall-3.c: Replace mn10?00 with mn10300.
