PR opt/11350         * cfgcleanup.c (try_optimize_cfg): Suppress tablejump removal         after reload.         * cfgrtl.c (try_redirect_by_replacing_branch): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@75967 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-16  Jan Hubicka  <jh@suse.cz>
+
+        PR opt/11350
+        * cfgcleanup.c (try_optimize_cfg): Suppress tablejump removal
+	after reload.
+        * cfgrtl.c (try_redirect_by_replacing_branch): Likewise.
+
 2004-01-15  J"orn Rennecke <joern.rennecke@superh.com>
 
 	PR optimization/10392
