--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-15  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
+
+	PR c++/13407
+	* parser.c (cp_parser_base_specifier): Check for an invalid
+	keyword `typename' and emit an user-friendly error message.
+
 2004-01-15  Geoffrey Keating  <geoffk@apple.com>
 
 	PR pch/13361
