* gnu/java/awt/peer/gtk/GdkGraphics2D.java: 	(doPolygon): set fill rule of polygon to 	WIND_EVEN_ODD by default
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75971 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-16  Olga Rodimina <rodimina@redhat.com>
+
+	* gnu/java/awt/peer/gtk/GdkGraphics2D.java:
+	(doPolygon): set fill rule of polygon to 
+	WIND_EVEN_ODD by default.
+
 2004-01-15  Olga Rodimina <rodimina@redhat.com>
 
 	* gnu/java/awt/peer/gtk/GdkGraphics2D.java:
