--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-16  Segher Boessenkool  <boessen@de.ibm.com>
+
+        PR target/11793
+	* config/rs6000/rs6000.h (LEGITIMATE_CONSTANT_P): Handle
+	vectors.
+	
 2004-01-16  Jan Hubicka  <jh@suse.cz>
 
         PR opt/11350
