--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-16  J"orn Rennecke <joern.rennecke@superh.com>
+
+	* postreload.c (reload_cse_simplify_operands): Don't remove
+	implicit extension from LOAD_EXTEND_OP.
+
 2004-01-16  Jan Hubicka  <jh@suse.cz>
 
         PR opt/11350
