* java/awt/EventDispatchThread.java (run): Stop running when         interrupted.         * java/awt/EventQueue.java (pop): Stop dispatch thread when done.         Reset the queue after transferring its contents.         (push): Start a new dispatch thread if none is running.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75977 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-16  Fernando Nasser  <fnasser@redhat.com>
+
+	* java/awt/EventDispatchThread.java (run): Stop running when
+	interrupted.
+	* java/awt/EventQueue.java (pop): Stop dispatch thread when done.
+	Reset the queue after transferring its contents.
+	(push): Start a new dispatch thread if none is running.
+
 2004-01-16  Olga Rodimina <rodimina@redhat.com>
 
 	* gnu/java/awt/peer/gtk/GdkGraphics2D.java:
