--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-16  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* system.h (LINKER_DOES_NOT_WORK_WITH_DWARF2): Poison.
+	* doc/tm.texi (PREFERRED_DEBUGGING_TYPE): Don't mention
+	LINKER_DOES_NOT_WORK_WITH_DWARF2.
+	(LINKER_DOES_NOT_WORK_WITH_DWARF2): Remove.
+
 2004-01-16  J"orn Rennecke <joern.rennecke@superh.com>
 
 	PR 11864
