--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-16  Mark Mitchell  <mark@codesourcery.com>
+
+	PR c++/13478
+	* call.c (convert_like_real): Do not perform an additional
+	direct-initialization when binding to a reference.
+
 2004-01-15  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
 	PR c++/13407
