--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-16  Andrew Haley  <aph@redhat.com>
+
+	* sysdep/x86-64/locks.h: Don't use in/out memory constraints.
+	* sysdep/i386/locks.h: Likewise.
+
 2004-01-16  Fernando Nasser  <fnasser@redhat.com>
 
 	* java/awt/EventDispatchThread.java (run): Stop running when
