--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,8 +1,8 @@
 2004-01-16  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13478
-	* call.c (convert_like_real): Do not perform an additional
-	direct-initialization when binding to a reference.
+	* call.c (initialize_reference): Pass -1 for inner parameter to
+	convert_like_real.
 
 2004-01-15  Giovanni Bajo  <giovannibajo@gcc.gnu.org>
 
