PR 10392 	From Marcus Comstedt / Dan Kegel: 	* gcc.dg/pr10392-1.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75985 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-16  J"orn Rennecke <joern.rennecke@superh.com>
+
+	PR 10392
+	From Marcus Comstedt / Dan Kegel:
+	* gcc.dg/pr10392-1.c: New test.
+
 2004-01-16  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13478
