--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-16  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13178
+	* call.c (name_as_c_string): Print conversion operator names
+	correctly.
+
 	PR c++/13478
 	* call.c (initialize_reference): Pass -1 for inner parameter to
 	convert_like_real.
