--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-16  Jan Hubicka  <jh@suse.cz>
+
+	* mangle.c (write_mangled_name): Remove inline modifier.
+
 2004-01-16  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13178
