--- a/gcc-3_3-branch/gcc/ChangeLog
+++ b/gcc-3_3-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-16  Jan Hubicka  <jh@suse.cz>
+
+	PR opt/13608
+	* i386.c (ix86_compute_frame_layout): Fix for alloca on leaf function.
+
 2004-01-16  Segher Boessenkool  <boessen@de.ibm.com>
 
         PR target/11793
