PR c++/13574 	* decl.c (compute_array_index_type): Fix grammar in comment. 	* init.c (build_zero_init): Handle zero-sized arrays correctly.
	PR c++/13574
	* g++.dg/ext/array1.C: New test.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75991 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-16  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13574
+	* g++.dg/ext/array1.C: New test.
+
 	PR c++/13178
 	* g++.dg/conversion/op1.C: New test.
 
