--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -4,6 +4,10 @@
 
 2004-01-16  Mark Mitchell  <mark@codesourcery.com>
 
+	PR c++/13574
+	* decl.c (compute_array_index_type): Fix grammar in comment.
+	* init.c (build_zero_init): Handle zero-sized arrays correctly.
+
 	PR c++/13178
 	* call.c (name_as_c_string): Print conversion operator names
 	correctly.
