--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,14 @@
+2004-01-16  Kim Ho  <kho@redhat.com>
+ 
+        * gnu/java/awt/peer/gtk/GtkComponentPeer.java (GtkComponentPeer): If
+        it is a FileDialog and has dimensions of 0 by 0, then the initial
+        size is set to size request plus insets.
+        * gnu/java/awt/peer/gtk/GtkFileDialogPeer.java
+        (gtkWidgetGetDimensions): Override method.
+        * jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
+        (gtkWidgetGetDimensions): Override method. Returns size request plus
+        insets.
+
 2004-01-16  Andrew Haley  <aph@redhat.com>
 
 	* sysdep/x86-64/locks.h: Don't use in/out memory constraints.
