--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,31 @@
+2004-01-16  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>
+
+	* fixinc/inclhack.def (alpha___extern_prefix): Renamed to ...
+	(alpha___extern_prefix_sys_stat): ... this.
+	Apply to <sys/mount.h>, too.
+	Tweak to match more variations.
+	* fixinc/tests/base/sys/stat.h: Adapt for new hackname.
+
+	* fixinc/inclhack.def (alpha___extern_prefix,
+	alpha___extern_prefix_standards): New hacks to obey 
+ 	__PRAGMA_EXTERN_PREFIX.
+	* fixinc/tests/base/testing.h [ALPHA___EXTERN_PREFIX_CHECK]: New
+	test.
+	* fixinc/tests/base/standards.h: Likewise.
+	
+	* fixincl/inclhack.def (alpha_pthread): Tweak to match more
+	variations.
+	New testcase.
+	* fixinc/tests/base/pthread.h: Handle it.
+	
+	* fixincl/inclhack.def (bad_lval): Sort file list.
+	Add many missing files up to Tru64 UNIX V5.1B.
+	* gcc/fixinc/tests/base/libgen.h: Renamed to ...
+	* gcc/fixinc/tests/base/dirent.h: ... this to match new file list
+	order.
+	
+	* fixinc/fixincl.x: Regenerate.
+
 2004-01-16  Mark Mitchell  <mark@codesourcery.com>
 
 	* version.c (version_string): Change to 3.5.0.
