gcc/ 	* system.h (ASM_OUTPUT_SECTION_NAME): Poison. 	* config/alpha/unicosmk.h: Remove a commented-out definition 	of ASM_OUTPUT_SECTION_NAME. 	* config/stormy16/stormy16.h: Likewise.
	gcc/ada/
	* Make-lang.in (utils.o): Depend on target.h.
	* utils.c: Include target.h.
	(process_attributes): Use targetm.have_named_sections instead
	of ASM_OUTPUT_SECTION_NAME.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@75995 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-16  Kazu Hirata  <kazu@cs.umass.edu>
+
+	* Make-lang.in (utils.o): Depend on target.h.
+	* utils.c: Include target.h.
+	(process_attributes): Use targetm.have_named_sections instead
+	of ASM_OUTPUT_SECTION_NAME.
+
 2004-01-16  Andreas Jaeger  <aj@suse.de>
 
 	* Makefile.in: Add $(DESTDIR).
