--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-16  Fernando Nasser  <fnasser@redhat.com>
+
+	* java/awt/EventQueue.java (pop): Prevent breaking the chain if pop
+	is called for an intermediate queue.
+
 2004-01-16  Thomas Fitzsimmons  <fitzsim@redhat.com>
 
 	* jni/gtk-peer/gnu_java_awt_peer_gtk_GtkWindowPeer.c
