* java/awt/Container.java: Typo and indentation fixes.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76004 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,5 +1,7 @@
 2004-01-16  Tom Tromey  <tromey@redhat.com>
 
+	* java/awt/Container.java: Typo and indentation fixes.
+
 	* java/lang/natClassLoader.cc: Moved VMClassLoader methods...
 	* java/lang/natVMClassLoader.cc: ...here.  New file.
 	* Makefile.in: Rebuilt.
