--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2004-01-17  Jan Hubicka  <jh@suse.cz>
+
+	* c-common.c (c_estimate_num_insns_1): Handle builtin_constant_p and
+	builtin_expect specially.
+	* params.def (PARAM_MAX_INLINE_INSNS_AUTO): Set to 100.
+	(PARAM_LARGE_FUNCTION_INSNS): Set to 3000.
+	* invoke.texi (max-inline-insns-single): Set to 100.
+	(large-function-insns): Set to 3000.
+
 2004-01-16  Eric Christopher  <echristo@redhat.com>
 	    Chandrakala Chavva <cchavva@redhat.com>
 
