--- a/gcc-3_4-branch/gcc/po/ChangeLog
+++ b/gcc-3_4-branch/gcc/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-17  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* de.po: Update.
+
 2003-12-31  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* de.po: Update.
