--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,11 @@
+2004-01-16  Geoffrey Keating  <geoffk@apple.com>
+
+	* gcc.dg/pch/import-1.c: New.
+	* gcc.dg/pch/import-1.hs: New.
+	* gcc.dg/pch/import-1a.h: New.
+	* gcc.dg/pch/import-1b.h: New.
+	* gcc.dg/pch/import-1c.h: New.
+
 2004-01-16  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13574
