2004-01-16  Andrew Pinski  <pinskia@physics.uc.edu>
        * config/sh/sh.c: Include ggc.h.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76018 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-16  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	* config/sh/sh.c: Include ggc.h.
+
 2004-01-16  Geoffrey Keating  <geoffk@apple.com>
 
 	* Makefile.in (MD5_H): New.
