--- a/gcc-3_4-branch/gcc/ChangeLog
+++ b/gcc-3_4-branch/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-16  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	* config/sh/sh.c: Include ggc.h.
+
 2004-01-17  Jan Hubicka  <jh@suse.cz>
 
 	* c-common.c (c_estimate_num_insns_1): Handle builtin_constant_p and
