2004-01-16  Andrew Pinski  <pinskia@physics.uc.edu>
        * typeck.c (find_method_in_interfaces): Move variable
        definition up.


git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@76020 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_4-branch/gcc/java/ChangeLog
+++ b/gcc-3_4-branch/gcc/java/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-16  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	* typeck.c (find_method_in_interfaces): Move variable
+	definition up.
+
 2004-01-16  Andrew Haley  <aph@redhat.com>
 
 	PR java/13273:
