--- a/gcc-3_4-branch/gcc/ChangeLog
+++ b/gcc-3_4-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-16  Mark Mitchell  <mark@codesourcery.com>
+
+	* doc/include/gcc-common.texi (DEVELOPMENT): @clear it.
+	* version.c (version_string): Mark as prerelease.
+
 2004-01-16  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	* config/sh/sh.c: Include ggc.h.
