* configure.ac: Do not do internal checking or -Werror by default. 	* configure: Regenerated.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@76024 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_4-branch/gcc/ChangeLog
+++ b/gcc-3_4-branch/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-16  Mark Mitchell  <mark@codesourcery.com>
 
+	* configure.ac: Do not do internal checking or -Werror by default.
+	* configure: Regenerated.
+
 	* doc/include/gcc-common.texi (DEVELOPMENT): @clear it.
 	* version.c (version_string): Mark as prerelease.
 
