--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,4 +1,4 @@
-2004-01-17  J. Brobecker  <brobecker at gnat dot com>
+2004-01-17  J. Brobecker  <brobecker@gnat.com>
 
 	* dwarf2out.c (is_subrange_type): Renamed from is_ada_subrange_type().
 	Remove checks for is_ada() and TREE_UNSIGNED.
