* cfgrtl.c (try_redirect_by_replacing_jump): Optimize tablejumps 	even after reload, just don't remove the actual jump tables.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76028 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-16  Geoffrey Keating  <geoffk@apple.com>
+
+	* cfgrtl.c (try_redirect_by_replacing_jump): Optimize tablejumps
+	even after reload, just don't remove the actual jump tables.
+
 2004-01-17  J. Brobecker  <brobecker@gnat.com>
 
 	* dwarf2out.c (is_subrange_type): Renamed from is_ada_subrange_type().
