--- a/gcc-3_4-branch/gcc/ChangeLog
+++ b/gcc-3_4-branch/gcc/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-17  Jan Hubicka  <jh@suse.cz>
+
+	* toplev.c (HAVE_conditional_execution): Provide default.
+	(rest_of_handle_reorder_blocks): For conditional_execution target
+	update liveness once after all transformations
+	(rest_of_compilation): Do crossjumping before ce3.
+
 2004-01-17  J. Brobecker  <brobecker@gnat.com>
 
 	* dwarf2out.c (is_subrange_type): Renamed from is_ada_subrange_type().
