* toplev.c (rest_of_handle_reorder_blocks): Fix pasto in previous 	commit.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@76034 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_4-branch/gcc/ChangeLog
+++ b/gcc-3_4-branch/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2004-01-17  Jan Hubicka  <jh@suse.cz>
 
+	* toplev.c (rest_of_handle_reorder_blocks): Fix pasto in previous
+	commit.
+
 	* toplev.c (HAVE_conditional_execution): Provide default.
 	(rest_of_handle_reorder_blocks): For conditional_execution target
 	update liveness once after all transformations
