* snapshot-README: Mention how the snapshot was generated. 	* snapshot-index.html: Ditto.  Further sync with snapshot-README.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76037 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/maintainer-scripts/ChangeLog
+++ b/maintainer-scripts/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-17  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* snapshot-README: Mention how the snapshot was generated.
+	* snapshot-index.html: Ditto.  Further sync with snapshot-README.
+
 2004-01-03  Joseph S. Myers  <jsm@polyomino.org.uk>
 
 	* update_web_docs: Create tarballs of documentation sources and
