--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-16  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR c++/11895
+	* g++.dg/ext/vector1.C: New test.
+
 2004-01-16  Geoffrey Keating  <geoffk@apple.com>
 
 	* gcc.dg/pch/import-1.c: New.
