--- a/gcc-3_4-branch/gcc/cp/ChangeLog
+++ b/gcc-3_4-branch/gcc/cp/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-17  Fred Fish  <fnf@intrinsity.com>
+
+	PR c++/11895
+	* decl.c (reshape_init): Handle VECTOR_TYPE like ARRAY_TYPE,
+	except don't call array_type_nelts() with a VECTOR_TYPE.
+
 2004-01-16  Jan Hubicka  <jh@suse.cz>
 
 	* mangle.c (write_mangled_name): Remove inline modifier.
