--- a/gcc-3_4-branch/gcc/testsuite/ChangeLog
+++ b/gcc-3_4-branch/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-17  Andrew Pinski  <pinskia@physics.uc.edu>
+
+	PR c++/11895
+	* g++.dg/ext/vector1.C: New test.
+
 2004-01-16  Mark Mitchell  <mark@codesourcery.com>
 
 	PR c++/13574
