* doc/invoke.texi, doc/standards.texi: Point to 3.4 version of 	c99status.html.
git-svn-id: svn://gcc.gnu.org/svn/gcc/branches@76057 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc-3_4-branch/gcc/ChangeLog
+++ b/gcc-3_4-branch/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-17  Joseph S. Myers  <jsm@polyomino.org.uk>
+
+	* doc/invoke.texi, doc/standards.texi: Point to 3.4 version of
+	c99status.html.
+
 2004-01-17  Andrew Pinski  <pinskia@physics.uc.edu>
 
 	PR target/10781
