[gcc/ChangeLog] 2004-01-17  Ziemowit Laski  <zlaski@apple.com>
        * objc/objc-act.c (build_objc_method_call): Use target
        hooks instead of macros to determine if ..._stret
        dispatchers should be used (NeXT runtime only).

[gcc/testsuite/ChangeLog]
2004-01-17  Ziemowit Laski  <zlaski@apple.com>

        * objc.dg/stret-1.m: New.
        * objc.dg/stret-2.m: New.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@76072 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-17  Ziemowit Laski  <zlaski@apple.com>
+
+	* objc/objc-act.c (build_objc_method_call): Use target
+	hooks instead of macros to determine if ..._stret 
+	dispatchers should be used (NeXT runtime only).
+
 2004-01-17  Roger Sayle  <roger@eyesopen.com>
 
 	* builtins.c (expand_builtin_expect_jump): Fix mistake in my
