--- a/gcc-3_4-branch/gcc/ChangeLog
+++ b/gcc-3_4-branch/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-17  Ziemowit Laski  <zlaski@apple.com>
+
+	* objc/objc-act.c (build_objc_method_call): Use target
+	hooks instead of macros to determine if ..._stret
+	dispatchers should be used (NeXT runtime only).
+
 2004-01-17  Daniel Jacobowitz  <drow@mvista.com>
 
 	* rtl.h (emit_insn_before_sameloc, emit_jump_insn_before_sameloc)
